# SpriteGameGen

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GCloud-update-notice.txt  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-07-21T23-57-41-340Z.yml
backend/: .env.example  pyproject.toml
backend/app/: actions.py  character_bundle.py  cli.py  config.py  deps.py  main.py  manifest.py  mcp_server.py  models.py  recipe_batch.py  recipes.py
backend/app/data/: __init__.py  actions.v1.json
backend/app/pipeline/: atlas.py  background.py  frame_render.py  packer.py  pixelate.py  trim.py
backend/app/routes/: animate.py  assets.py  clips.py  export.py  generate.py  projects.py  prompts.py
backend/app/services/: asset_urls.py  azure_image_provider.py  comfyui_provider.py  comfyui_workflow.py  gemini_client.py  image_provider.py  pose_reference.py  prompt_builder.py  provider_selection.py  sprite_runtime.py  sprite_service.py
backend/app/storage/: project_store.py
backend/tests/: test_action_catalog.py  test_atlas.py  test_azure_image_provider.py  test_background.py  test_character_bundle.py  test_cli.py  test_comfyui_provider.py  test_comfyui_workflow.py  test_config.py  test_dependency_licenses.py  test_doctor.py  test_export_multi.py  test_frame_render.py  test_gemini_client.py  test_godot_profile.py  test_godot_smoke.py  test_live_model_validation.py  test_main_readiness.py  test_manifest_migrations.py  test_mcp_server.py  test_models.py  test_packer.py  test_pixelate.py  test_pose_reference.py  test_project_store.py  test_prompt_builder.py  test_provider_selection.py  test_recipe_batch.py  test_recipes.py  test_routes_animate.py  test_routes_clips.py  test_routes_projects.py  test_routes_prompts.py  test_routes_stage1.py  test_sprite_service.py  test_trim.py
backend/tests/fixtures/: atlas_golden.json
docs/: actions-and-recipes.md  character-bundles.md  comfyui.md  live-model-validation.md  release-process.md  version-contracts.md
frontend/: devProxy.test.ts  index.html  package-lock.json  package.json  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_learning.json  .graphify_root  .vocab.txt  EXPLORATION_REPORT.md  GRAPH_REPORT.md  QUERY_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: check_dependency_licenses.py  doctor.py  godot_validate.gd  live_model_validation.py  run_godot_smoke.py  smoke_generate.py  smoke_mcp.py  validate_comfyui.py  validate_live_models.py
tasks/: plan.md  (+1 more)
(+41 files in other folders)
