[project]
name = "sprite-game-asset-tool"
version = "0.1.0"
description = "Local AI sprite & game asset tool — Gemini generation + deterministic image pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pillow>=10.3",
    "numpy>=1.26",
    "rembg>=2.0.56",
    "onnxruntime>=1.17",  # rembg inference backend (not pulled in by default)
    "google-genai>=0.3",
    "python-multipart>=0.0.9",
    "mcp>=1.12,<2",
    "httpx>=0.27",
]

[project.scripts]
sprite-mcp = "app.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
